[project]
name = "DEMO-GUARDRAILS"
version = "0.1.0"
description = "Demo Guardrails"
authors = [
    { name = "Rijuta Rajbhandari", email = "rijuta2001@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    # API & server
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.36.0,<0.37.0)",
    "python-multipart (>=0.0.20,<0.0.21)",

    # LLM + Lang ecosystem
    "openai (>=1.106.1,<2.0.0)",
    "langchain (>=1.0.0,<2.0.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "langchain-openai (>=0.3.32,<0.4.0)",
    "langgraph (>=1.0.0,<2.0.0)",

    # LangGraph persistence / state
    "langgraph-checkpoint-redis (>=0.1.1,<0.2.0)",
    "redis (>=6.4.0,<7.0.0)",

    # Data & validation
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "validators (>=0.35.0,<0.36.0)",
    "pandas (>=2.3.2,<3.0.0)",

    # Logging
    "loguru (>=0.7.3,<0.8.0)",

    # Databases / vector stores
    "motor (>=3.7.1,<4.0.0)",

    # Tokenization & graph visualization
    "tiktoken (>=0.11.0,<0.12.0)",
    "grandalf (>=0.8,<0.9)",
    "langchain-text-splitters (>=1.1.0,<2.0.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "rapidfuzz (>=3.14.3,<4.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "chromadb (>=1.5.0,<2.0.0)",
    "presidio-analyzer (>=2.2.361,<3.0.0)",
    "presidio-anonymizer (>=2.2.361,<3.0.0)",
    "langdetect (>=1.0.9,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "src" }]

[dependency-groups]
dev = [
    "uvicorn (>=0.36.0,<0.37.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]
